[lworld] C1 compilation fails with assert "should not be optimized out"

XMLWordPrintable

      # Internal Error (/oracle/valhalla/open/src/hotspot/share/c1/c1_GraphBuilder.cpp:1073), pid=644228, tid=644242
      # assert(!(profile_array_accesses() && is_reference_type(type)) || load_indexed == result) failed: should not be optimized out

      Current CompileTask:
      C1: 290 385 3 MainClass::method1 (201 bytes)

      Stack: [0x00007fb9ae233000,0x00007fb9ae334000], sp=0x00007fb9ae331d20, free space=1019k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x74b832] GraphBuilder::load_indexed(BasicType)+0x752
      V [libjvm.so+0x7552ed] GraphBuilder::iterate_bytecodes_for_block(int)+0x1ddd
      V [libjvm.so+0x7559c9] GraphBuilder::iterate_all_blocks(bool)+0x89
      V [libjvm.so+0x756baf] GraphBuilder::GraphBuilder(Compilation*, IRScope*)+0x52f
      V [libjvm.so+0x767423] IR::IR(Compilation*, ciMethod*, int)+0x663
      V [libjvm.so+0x724921] Compilation::build_hir() [clone .part.0]+0x261
      V [libjvm.so+0x72933c] Compilation::compile_java_method()+0x1bc
      V [libjvm.so+0x72a157] Compilation::compile_method()+0x1d7
      V [libjvm.so+0x72abc6] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x3c6
      V [libjvm.so+0x72c043] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1a3
      V [libjvm.so+0xa619e8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe08
      V [libjvm.so+0xa62538] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x198e796] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1995110] Thread::call_run()+0x100
      V [libjvm.so+0x164fa76] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: