8260034: [lworld] C1 compilation fails with assert "should not be optimized out"